--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask==3.0.3
 Jinja2==3.1.4
 joblib==1.4.2
 matplotlib==3.9.1
-mysql-connector-python ==9.0.0
+pymongo
 nest-asyncio==1.6.0
 numpy==2.0.0
 pandas==2.2.2
