data ingestion update

--- a/.github/workflows/ci-cd-pipeline.yaml
+++ b/.github/workflows/ci-cd-pipeline.yaml
@@ -82,10 +82,10 @@ jobs:
       - name: Pull latest images
         run: |
           docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-
-      - name: Stop and remove container if running
-        run: |
-          docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm -fv cnncls
+      # Nich di gayi line ko tabhi uncomment kare jab koi container run ho raha ho
+      # - name: Stop and remove container if running
+      #   run: |
+      #     docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm -fv cnncls
        
       - name: Run Docker Image to serve users
         run: |
